checked all styles except mob

--- a/src/components/Grains/style.module.scss
+++ b/src/components/Grains/style.module.scss
@@ -1,13 +1,14 @@
-.grains__wrapper {
+.products__wrapper {
   display: flex;
   align-items: center;
   margin: 32px 0 0 0;
 }
 
-.grains__grain {
+.grain {
   display: inline-block;
   width: 16px;
   height: 17px;
+  /* background-image: url('path/to/combined-grain.png');  */
   background-size: cover;
   margin: 0 8px 0 0;
 }
@@ -16,23 +17,19 @@
   margin: 0 35px 0 0;
 }
 
-.grains__grain_filled {
+.filled {
   background-image: url(../../images/bean_full.svg);
 }
 
-.grains__grain_empty {
+.empty {
   background-image: url(../../images/bean_empy.svg);
 }
 
-.grains__info {
+.products__info {
   color: var(--Black_text, #0f100f);
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 400;
-  line-height: 23px;
+  line-height: normal;
   letter-spacing: 0em;
   margin: 0;
-}
-
-.grains__row {
-  display: flex;
 }
