--- a/src/pages/sign-in/style.module.scss
+++ b/src/pages/sign-in/style.module.scss
@@ -90,7 +90,7 @@
   margin: 24px 0 0 0;
 }
 
-.auth__link-text {
+.auth__link_text {
   font-size: 18px;
   line-height: 23px;
   padding: 30px 0 0;
@@ -108,7 +108,7 @@
   opacity: 0.7;
 }
 
-.auth__recover-link {
+.auth__recover_link {
   font-family: Ubuntu;
   font-size: 20px;
   font-weight: 400;
