--- a/src/components/PopupCart/style.module.scss
+++ b/src/components/PopupCart/style.module.scss
@@ -195,7 +195,7 @@
     margin: 25px 0 0 0;
   }
 
-  .popupCart__button-continue {
+  .popupCart__button_continue {
     padding: 0;
     margin: 0;
     font-size: 20px;
@@ -204,7 +204,7 @@
     letter-spacing: 0em;
   }
 
-  .popupCart__button-order {
+  .popupCart__button_order {
     width: 328px;
     height: 52px;
     margin: 24px 0 0 0;
