--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -53,6 +53,8 @@
   padding: 0;
   text-decoration: none;
   color: var(--Accent, #465244);
+  border: none;
+  background: transparent;
 }
 
 @media screen and (max-width: 767px) {
