--- a/src/components/SessionOrderInputs/style.module.scss
+++ b/src/components/SessionOrderInputs/style.module.scss
@@ -1,122 +1,24 @@
-.order__container {
-  display: flex;
-  margin: 0;
-  flex-wrap: wrap;
-  max-width: 632px;
+.account__container {
+  width: 100%;
+  margin: 0 auto;
+}
+
+.input__container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 32px;
-  align-content: flex-start;
+  max-width: 800px;
+  margin: 0 auto;
 }
-.order-input__container {
-  display: flex;
-  flex-direction: column;
-  /* margin: 0 48px 32px 0; */
-  height: 80px;
-}
-.order__input {
-  color: var(--Black-1000-main, #333);
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  outline: none;
-  border: none;
-  background-color: transparent;
-  border-radius: var(--Border-Radius-rounded-none, 0px);
-  border-bottom: 1px solid var(--Black_text, #0f100f);
-  margin: 0 0 48px 0;
-  padding: 0 0 12px 0;
-}
-
-.order__label {
-  color: var(--Black-600, #7e7e7e);
-  font-family: Montserrat;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 24px; /* 171.429% */
-  letter-spacing: -0.154px;
-  letter-spacing: -0.154px;
-  margin: 0 0 8px 0;
-}
-
-.order__label::placeholder {
-  color: var(--placeholder-color, #a0a0a0);
-  text-indent: 12px;
-}
-
-.order-input__button {
-    border-radius: 64px;
-    background: var(--Accent, #465244);
-    border: none;
-    color: var(--White_text, #f6f6f6);
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    width: 270px;
-    height: 64px;
-    margin: 16px 0 0 0;
-  }
 
 @media screen and (max-width: 767px) {
-  .order__container {
-    display: flex;
-    margin: 0;
-    flex-wrap: wrap;
-    max-width: 328px;
-    gap: 32px;
-    align-content: flex-start;
-  }
-  .order-input__container {
+  .input__container {
     display: flex;
     flex-direction: column;
-    /* margin: 0 48px 32px 0; */
-    height: 80px;
+    flex-wrap: wrap;
+    row-gap: 32px;
+    column-gap: 48px;
+    width: 328px;
+    margin: 0 16px;
   }
-  .order__input {
-    color: var(--Black-1000-main, #333);
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    outline: none;
-    border: none;
-    background-color: transparent;
-    border-radius: var(--Border-Radius-rounded-none, 0px);
-    border-bottom: 1px solid var(--Black_text, #0f100f);
-    margin: 0 0 48px 0;
-    padding: 0 0 12px 0;
-  }
-  
-  .order__label {
-    color: var(--Black-600, #7e7e7e);
-    font-family: Montserrat;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 24px; /* 171.429% */
-    letter-spacing: -0.154px;
-    letter-spacing: -0.154px;
-    margin: 0 0 8px 0;
-  }
-  
-  .order__label::placeholder {
-    color: var(--placeholder-color, #a0a0a0);
-    text-indent: 12px;
-  }
-  
-  .order-input__button {
-      border-radius: 64px;
-      background: var(--Accent, #465244);
-      border: none;
-      color: var(--White_text, #f6f6f6);
-      font-size: 20px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: normal;
-      width: 270px;
-      height: 64px;
-      margin: 16px 0 0 0;
-    }
-  
 }
