--- a/src/components/DeliveryBlock/style.module.scss
+++ b/src/components/DeliveryBlock/style.module.scss
@@ -8,7 +8,7 @@
 .delivery_block__buttons_container {
   display: flex;
   gap: 24px;
-  margin: 48px 0 0 0;
+  margin: 48px 0 32px 0;
 }
 
 .delivery_block__button {
