--- a/src/pages/privacy-policy/index.module.scss
+++ b/src/pages/privacy-policy/index.module.scss
@@ -51,3 +51,29 @@
 .link {
 	color: #0070f3;
 }
+
+@media screen and (max-width: 767px) {
+	.container {
+		margin: 0 20px;
+		padding: 32px 0 64px 0;
+	}
+
+	.title {
+		font-size: 25px;
+		margin: 0 0 20px 0;
+	}
+
+	.subtitle {
+		font-size: 17px;
+		margin-bottom: 10px 0 0 0;
+	}
+
+	.text {
+		font-size: 15px;
+		margin: 0;
+	}
+
+	.list {
+		font-size: 13px;
+	}
+}
